--- a/index.html
+++ b/index.html
@@ -3,34 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 14px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  
 </head>
 <body>
+  <div class="product">
+    <div class="row">
+      <div class="col-1">
+        <img src="images\image-product-desktop.jpg" alt="Product" id="desktop">
+        <img src="images\image-product-mobile.jpg" alt="Product" id="mobile">
+      </div>
+      <div class="col-2">
+        <h4>PERFUME</h4>
+        <h1>Gabrielle Essence Eau De Parfum</h1>
+        <p>A floral, solar and voluptuous interpretation composed by Oliver Polge, Perfumer-Creator for the House of CHANEL</p>
+        <div class="price">
+          <h1>$149.99</h1>
+          <p>$169.99</p>
+        </div>      
+        <button><embed src="images\icon-cart.svg"/> Add to Cart</button>
+      </div>
+    </div>
+  </div>
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/abdelbassetbelaid3">@abdelbassetbelaid3</a>.
   </div>
 </body>
 </html>
