--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
   <style>
-    .attribution { font-size: 14px; text-align: center; }
+    .attribution { font-size: 14px; text-align: center;  margin-bottom: 15px;}
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
   
